--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h1>Kommt bald</h1>
         <p>Etwas Cooles kommt bald. Bleiben Sie dran!</p>
         <div class="video-container">
-            <video src="/1.mp4" controls></video>
+            <video src="mywebsite/1.mp4" controls></video>
         </div>
     </div>
     <footer>
