--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             height: 100%;
             object-fit: cover;
             z-index: -1;
-            filter: blur(8px);
+            filter: blur(8px) brightness(0.7);
         }
 
         .container {
@@ -40,9 +40,8 @@
             font-size: 4rem;
             margin: 0;
             animation: fadeIn 2s ease-in-out, float 3s ease-in-out infinite;
-            position: relative;
-            color: #00d4ff;
-            text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff, 0 0 40px #00d4ff;
+            color: rgba(255, 255, 255, 0.9);
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
         }
 
         h1 .dots {
@@ -50,16 +49,16 @@
             margin-left: 10px;
             font-size: 4rem;
             animation: loadingDots 1.5s infinite;
-            color: #00d4ff;
-            text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff, 0 0 40px #00d4ff;
+            color: rgba(255, 255, 255, 0.9);
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
         }
 
         p {
             font-size: 1.5rem;
             margin: 20px 0;
             animation: fadeIn 2s ease-in-out 1s;
-            color: #00d4ff;
-            text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff, 0 0 40px #00d4ff;
+            color: rgba(255, 255, 255, 0.8);
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         .video-container {
@@ -74,8 +73,9 @@
 
         video {
             width: 100%;
-            border: 3px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
         footer {
@@ -84,6 +84,7 @@
             font-size: 0.9rem;
             color: rgba(255, 255, 255, 0.7);
             margin-top: 30px;
+            animation: fadeIn 2s ease-in-out 2s;
         }
 
         @keyframes fadeIn {
@@ -105,18 +106,10 @@
         }
 
         @keyframes loadingDots {
-            0% {
-                content: '';
-            }
-            33% {
-                content: '.';
-            }
-            66% {
-                content: '..';
-            }
-            100% {
-                content: '...';
-            }
+            0% { content: ''; }
+            33% { content: '.'; }
+            66% { content: '..'; }
+            100% { content: '...'; }
         }
     </style>
 </head>
